# softRenderer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  duplicate.cpp  hashHelper.h  main.cpp  model.h  register.cpp  register.h  tgaimage.h
framework/: CMakeLists.txt  basic_define.h  camera.hpp  global_context.cpp  global_context.h  input_system.cpp  input_system.h  jerry_engine.cpp  window_system.cpp  window_system.h
framework/app/: device_manager.cpp  device_manager.h  vk_device_manager.cpp  vk_device_manager.h
framework/core/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  debug.cpp  debug.h  device.cpp  device.h  error.h  fence_pool.cpp  fence_pool.h  helpers.cpp  helpers.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  queue.cpp  queue.h  render_frame.cpp  vulkan_resource.cpp  vulkan_resource.h  vulkan_vma.cpp
framework/rendering/: render_context.cpp  render_context.h  render_pass.cpp  render_pass.h  swapchain.cpp
framework/scene/: component.cpp  component.h  gltf_loader.cpp  gltf_loader.h  import_image.cpp  import_image.h  scene.cpp  scene.h  submesh.cpp  submesh.h
math/: CMakeLists.txt
platform/: CMakeLists.txt  fileSystem.cpp  fileSystem.h
render/: CMakeLists.txt  global_context.cpp  global_context.h  jerry_engine.cpp  jerry_engine.h  macro.h  window_system.cpp  window_system.h
render/core/: command_pool.cpp  command_pool.h  device.cpp  device.h  error.cpp  error.h  fence_pool.cpp  fence_pool.h  helpers.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  queue.cpp  queue.h  render_frame.h
render/rendering/: render_context.cpp  render_context.h  swapchain.cpp  swapchain.h
shaders/: compile.bat  forwardpass.frag  forwardpass.frag.spv  forwardpass.vert  forwardpass.vert.spv
shaders/spv/: forwardpass.frag.spv  triangle.vert.spv
utils/: CMakeLists.txt  hashHelper.h  log_system.cpp  log_system.h  memalign.h
